syntax = "proto3";

package logpropagation;
option go_package = "github.com/dvasilas/proteus/protos/antidote";

service Service {
  rpc WatchAsync(SubRequest) returns (stream LogOperation) {}
}

message SubRequest {
  int64 timestamp = 1;
}

message LogOperation {
  message StateDelta {
    CrdtMapState old = 1;
    CrdtMapState new = 2;
  }
  message Payload {
      oneof val {
        StateDelta delta = 1;
        Operation op = 2;
    }
  }
  string dc_ID = 1;
  string partition_ID = 2;
  string key = 3;
  string bucket = 4;
  string crdt_type = 5;
  int64 commit_time = 6;
  Payload payload = 7;
}

message CrdtMapState {
  message MapState {
    CrdtKeyType object = 1;
    CrdtValue value = 2;
  }
  repeated MapState state = 1;
}

message Operation {
  message Op {
    CrdtKeyType object = 1;
    Update update = 2;
  }
  repeated Op op = 1;
}

message CrdtKeyType {
  string key = 1;
  string type = 2;
}

message CrdtValue {
  oneof val {
    string str = 1;
    int64 int = 2;
  }
}

message Update {
  string op_type = 1;
  CrdtValue value = 2;
}